--- a/resources.html
+++ b/resources.html
@@ -7,24 +7,57 @@
     </head>
     <body>
         <header>
+            <!-- using buttons in the nav bar for look and feel -->
             <ul>
                 <li><a class="btn" href="https://lis500-egbecker.ischool.wisc.edu/">Home</a></li>
                 <li><a class="btn" href="aboutus.html">About Us</a></li>
-                <li><a class="btn" href="techhero.html">Our Tech Hero</a></li>
+                <li><a class="btn" href="techhero.html">Our Tech Heroes</a></li>
                 <li><a class="btn" href="resources.html">Implicit Bias Resources</a></li>
+                <li><a class="btn" href="machinelearning.html">Machine Learning</a></li>
             </ul>
         </header>
         <h1>Implicit Bias Resources</h1>
-        <p></p>
         <p>
-            "Implicit Bias" is a term that names the attitudes and stereotypes that can subconsciously shape one's
-            thoughts, actions, and decisions without even realizing it. Whether the associations someone holds are
-            positive or negative, every single person is susceptible to having implicit biases. These biases can be best
-            understood by approaching them with an "intersectional" framework.
+            The fields of technology and innovation are often heralded as beacons of progress, yet they are not immune
+            to the systemic issues that pervade society. Two critical frameworks for understanding these issues are
+            intersectionality and implicit bias. Implicit bias is a term that names the attitudes and stereotypes that
+            can unconsciously shape one's thoughts, actions, and decisions without even realizing it. Intersectionality,
             <a
-                href="https://www.law.columbia.edu/news/archive/kimberle-crenshaw-intersectionality-more-two-decades-later"
-                >Coined in 1989 by Kimberlé Crenshaw </a
-            >, intersectionality helps us understand how different identities and experiences overlap.
+                href="https://www.law.columbia.edu/news/archive/kimberle-crenshaw-intersectionality-more-two-decades-later">
+                coined by Kimberlé Crenshaw</a
+            >, examines how various social identities—such as race, gender, and socioeconomic status—intersect to create
+            unique experiences of oppression or privilege. Together, these concepts illuminate how systemic inequalities
+            manifest within the tech industry.
+        </p>
+        <p>
+            The tech industry is predominantly shaped by a homogenous group of individuals, often reflecting the
+            privilege of white, male, and affluent backgrounds. This lack of diversity has significant implications for
+            product design, workforce culture, and market reach. For instance, when predominantly white and male teams
+            develop technologies, they may overlook the needs and experiences of underrepresented groups. This is
+            evident in numerous case studies, such as facial recognition technology that exhibits bias against people of
+            color, largely because the algorithms were trained on non-diverse datasets.
+        </p>
+        <p>
+            Intersectionality offers a lens to critique this homogeneity. Women of color in tech face compounded
+            discrimination, often experiencing both sexism and racism. This dual burden can lead to their voices being
+            marginalized in decision-making processes, exacerbating issues of representation and equity. For example,
+            women of color are often underrepresented in leadership roles, resulting in a lack of diverse perspectives
+            in product development. Companies that fail to adopt an intersectional approach may inadvertently create
+            products that cater to a narrow demographic, limiting innovation and alienating large segments of the
+            market.
+        </p>
+        <p>
+            Implicit bias plays a critical role in hiring practices within the tech industry. Research shows that
+            resumes with "ethnic-sounding" names are often rated lower than those with "white-sounding" names, even when
+            qualifications are identical. This bias can extend to the evaluation of candidates during interviews and
+            performance reviews. For instance, women may face scrutiny that their male counterparts do not, leading to
+            disparities in promotions and job retention.
+        </p>
+        <p>
+            Furthermore, implicit bias contributes to a workplace culture that may unwittingly exclude certain groups.
+            This can manifest in microaggressions, which are subtle, often unintentional comments or actions that can
+            marginalize individuals based on their identity. The cumulative effect of these biases creates an
+            environment where diverse voices feel undervalued or silenced, further perpetuating the cycle of exclusion.
         </p>
         <p>
             To do your part of helping create a more equitable world, please take the time to learn more about implicit
@@ -64,26 +97,37 @@
                     <a href="https://courses.nrmnet.net/course/c/JqPZiUQo0O">The Unconsious Bias Course</a> they offer
                     is a multi-module program that awards certifications upon completion of each module.
                 </p>
-			<li>
-				National Association of Independent Schools (NAIS), Kimberlé Crenshaw: What is Intersectionality?
-				<p>
-					Kimberlé Crenshaw, a 2017 NAIS People of Color Conference speaker, civil rights advocate, 
-					and professor at UCLA School of Law and Columbia Law School, talks about intersectional theory, 
-					the study of how overlapping or intersecting social identities—and particularly minority 
-					identities—relate to systems and structures of discrimination.
-				</p>
-				<p class="photo">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/ViDtnfQ9FHc?si=BbrDdg78zhw1GsSB" 
-				title="YouTube video player" frameborder="0" 
-				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-				referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
+            </li>
+
+            <li>
+                National Association of Independent Schools (NAIS), Kimberlé Crenshaw: What is Intersectionality?
+                <p>
+                    Kimberlé Crenshaw, a 2017 NAIS People of Color Conference speaker, civil rights advocate, and
+                    professor at UCLA School of Law and Columbia Law School, talks about intersectional theory, the
+                    study of how overlapping or intersecting social identities—and particularly minority
+                    identities—relate to systems and structures of discrimination.
+                </p>
+                <!-- video using embed features from Youtube -->
+                <p class="photo">
+                    <!-- CSS class "photo" seperate video from footer -->
+                    <iframe
+                        width="560"
+                        height="315"
+                        src="https://www.youtube.com/embed/ViDtnfQ9FHc?si=BbrDdg78zhw1GsSB"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin"
+                        allowfullscreen></iframe>
+                </p>
             </li>
         </ol>
         <footer>
             <p>
+                <!-- IP info below -->
                 Copyright Liz Becker and David Moore 2024<br />
-                <a href="mailto:egbecker@wisc.edu">egbecker@wisc.edu</a>
-                <a href="mailto:dmoore33@wisc.edu">dmoore33@wisc.edu</a>
+                <a href="mailto:egbecker@wisc.edu" class="cornsilk">egbecker@wisc.edu</a>
+                <a href="mailto:dmoore33@wisc.edu" class="cornsilk">dmoore33@wisc.edu</a>
             </p>
         </footer>
     </body>
