--- a/machinelearning.html
+++ b/machinelearning.html
@@ -23,11 +23,118 @@
             its core, ML enables systems to learn from past experiences, improving their performance over time as they
             process more data.
         </p>
-        <h1>Our Teachable Machine</h1>
-        <h2>Our Project</h2>
-        <p>Liz's statement</p>
+        <p>
+            The process begins with data collection, where raw datasets are gathered and prepared for analysis. This
+            step often includes cleaning the data to remove errors, inconsistencies, or irrelevant information. The next
+            step is feature selection, where key variables or attributes in the dataset are chosen to enhance model
+            accuracy.
+        </p>
+        <p>
+            Once the data is prepared, an ML algorithm is selected based on the problem type, such as classification,
+            regression, or clustering. Algorithms like decision trees, neural networks, or support vector machines are
+            then trained using a portion of the dataset, enabling them to identify relationships within the data.
+        </p>
+        <p>
+            During training, the algorithm adjusts its parameters to minimize errors, improving its predictive
+            performance. After training, the model is validated and tested with new data to ensure reliability and
+            generalization. Finally, the model can be deployed to make real-world predictions or decisions, with its
+            performance monitored over time for continuous improvement.
+        </p>
+        <h1>Our Project Statements</h1>
+        <h2>Liz's Statement</h2>
+        <p>
+            Machine learning, a rapidly advancing branch of artificial intelligence, has captured the imagination of
+            technologists and the general public alike. However, the foundational concepts behind AI can often seem out
+            of reach for those without a technical background. Google's Teachable Machines platform bridges this gap,
+            empowering anyone with basic web development skills and a creative mindset to understand and experiment with
+            machine learning. For this project, we embarked on a journey to design and implement a machine learning
+            algorithm, integrate it into a functional webpage, and critically reflect on our work's ethical and societal
+            implications, inspired by Joy Buolamwini's <i>Unmasking AI</i>.
+        </p>
+        <p>
+            This project was not just about theory; it was about hands-on experimentation and practical learning. By
+            following the structured tutorial provided by Teachable Machines, David and I gained the practical skills to
+            create and deploy an algorithm capable of classifying images or recognizing voices. We started by training
+            the algorithm using a custom dataset. Using a simple webcam setup, we captured examples of the categories we
+            wanted the machine to distinguish, ensuring the dataset was varied enough to provide robust training while
+            remaining manageable within the constraints of the project. After training the model, we exported it and
+            integrated it into a custom webpage using HTML, CSS, and JavaScript. Our completed webpage serves as both a
+            demonstration of the algorithm in action and a reflection of our learning journey. Visitors to the page can
+            interact with the trained model and observe how it classifies inputs in real-time. We embedded a video
+            showcasing the algorithm's development and operation to complement this interactive element.
+        </p>
+        <p>
+            As we worked through this project, the critical themes in <i>Unmasking AI</i> provided a vital lens for
+            evaluating our work. Buolamwini's emphasis on bias in AI systems was particularly resonant. No matter how
+            advanced, machine learning models are only as unbiased as the data they are trained on. Datasets can
+            inadvertently reflect the prejudices and inequalities of the natural world, leading to algorithms that
+            perpetuate these issues. This awareness led us to evaluate the dataset we created carefully. We aimed to
+            include many examples to ensure the model was as inclusive and representative as possible. However, we
+            recognized that true inclusivity requires ongoing vigilance, feedback, and refinement, emphasizing the
+            importance of iterative development in AI design.
+        </p>
+        <p>
+            Buolamwini's call for ethical responsibility in AI development also prompted us to reflect on the broader
+            implications of our work. While this project is a relatively small-scale exercise, it mirrors the challenges
+            of larger AI systems deployed worldwide. For example, even though our algorithm operates in a controlled
+            environment, questions about its potential misuse, limitations, and design assumptions remained central to
+            our discussions. These reflections deepened our understanding of the need for transparency and
+            accountability in AI development, reassuring us and the audience of the responsible future of technology.
+        </p>
+        <p>
+            The collaborative nature of this project added another layer of richness to the experience. Working as a
+            group required us to navigate different perspectives, skills, and approaches to problem-solving. Both David
+            and I brought unique strengths, from technical proficiency in coding to creative ideas for presenting the
+            project on the webpage. This diversity of thought enhanced the quality of our work and mirrored the
+            multidisciplinary approach that successful AI development often requires. Our collaboration underscored the
+            importance of communication, adaptability, and shared responsibility, all essential skills in both academic
+            and professional contexts.
+        </p>
+        <p>
+            Another significant aspect of this project was the integration of creativity with technical implementation.
+            Designing the algorithm and building the webpage required analytical thinking and artistic expression.
+            Decisions about the webpage's layout, color scheme, and user experience were just as important as the
+            technical accuracy of the algorithm itself. This interplay between creativity and technology highlighted the
+            potential for AI to be a tool for solving problems and enabling new forms of artistic and cultural
+            expression.
+        </p>
+        <p>
+            This project was not just about our own learning and development; it was also about contributing to the
+            broader community of learners and developers. By uploading our code to GitHub and documenting our process,
+            we made a significant contribution to the open-source ecosystem. Our work is now available for others to
+            learn from and build upon, aligning with the ethos of transparency and collaboration that Buolamwini
+            advocates for. This project is a testament to our belief that AI development should be inclusive and
+            participatory.
+        </p>
+        <p>
+            The final stages of the project, including soliciting feedback and making iterative improvements,
+            underscored the value of continual learning and refinement. Feedback from peers and instructors provided
+            fresh perspectives on our work, revealing blind spots we had overlooked and suggesting ways to enhance the
+            project's functionality and presentation. These iterative cycles of development and critique mirrored the
+            real-world processes of AI research and development, where no system is ever truly finished, and improvement
+            is a constant goal. This commitment to improvement should motivate and inspire all of us in the field of AI.
+        </p>
+        <p>
+            In reflecting on the entire experience, several vital lessons emerge. First, machine learning is more opaque
+            than it often seems; with the right tools and guidance, anyone can understand and experiment with it.
+            Second, creating and deploying an algorithm is more about ethical considerations than technical precision.
+            Buolamwini's work reminded us that every choice we make in designing an AI system carries implications for
+            its fairness, inclusivity, and impact on society. Finally, this project's collaborative and creative aspects
+            underscored the importance of bringing diverse perspectives and disciplines together to tackle complex
+            challenges.
+        </p>
+        <p>
+            This project represents a convergence of technical skills, ethical inquiry, and creative exploration. It is
+            a testament to the power of accessible tools like Teachable Machines to democratize AI and empower
+            individuals to engage with technology in meaningful ways. As we move forward, the lessons learned from this
+            project will continue to inform our approach to AI, reminding us of the importance of curiosity,
+            responsibility, and collaboration in shaping the future of technology.
+        </p>
+        <h2>David's Statement</h2>
         <p>David's statement</p>
+        <h1>Our Teachable Machine</h1>
         <h2>Our Trained Model</h2>
+        <p>Our model identifies</p>
         <p>Embedded video of our audio model</p>
     </body>
 </html>
