--- a/machinelearning.html
+++ b/machinelearning.html
@@ -171,8 +171,8 @@
 <li>Each chord was played by me on the vibraphone and recorded with the sustain pedal suppressed, allowing the chord to ring out. I recorded each chord for 8 seconds, which in turn were broken up into 8, 1 second samples. This results in a total of 384 samples in total.</li>
 <li>The datasets were fed through the teachable machine for 300 epochs</li>
 </ol>
-<br>
-<p>Unfortunately, the machine misidentified the chord qualities nearly every time.&nbsp;</p>
+<p>&nbsp;</p>
+<p>Unfortunately, the machine misidentified the chord qualities nearly every time</p>
 <p><strong>A Theory on Why the Chord Quality Identifier Failed</strong></p>
 <p>&nbsp;My faulty assumption was that the aspects of aural training that humans find easiest to master would be the same ones that the machine could easily identify.&nbsp; This thesis proved incorrect. The teachable machine is powered by transfer learning, and built on<a href="https://github.com/tensorflow/tfjs-models/tree/master/speech-commands"> Speech Command Recognizer.</a> This model is built upon TensorFlow.js, and was designed specifically for simple speech recognition tasks:</p>
 <p>&ldquo;Its primary goal is to provide a way to build and test small models that detect when a single word is spoken, from a set of ten or fewer target words, with as few false positives as possible from background noise or unrelated speech. This task is often known as keyword spotting.&rdquo;</p>
@@ -186,7 +186,7 @@
 <li>Each note was played by me on the vibraphone and recorded with the sustain pedal suppressed, allowing it to ring out. I recorded each chord for 8 seconds, which in turn were broken up into 8, 1 second samples. This means there is a total of 296, 1-second samples.</li>
 <li>The datasets were fed through the teachable machine for 100 epochs</li>
 </ol>
-<br>
+<p>&nbsp;</p>
 <p><strong>A note on pitch and tuning:</strong>; this machine, being based on the well-tempered system that all keyboard instruments are tuned to, does not account for the slight differences in pitch that a vocal or string ensemble would employ.&nbsp; For example, on a keyboard, the notes Bb and A# are enharmonically the same but will be slightly different than each other when performed by a vocal ensemble.&nbsp; For more on this please visit the Wikipedia article about musical temperament <a href="https://en.wikipedia.org/wiki/Musical_temperament">here</a>.</p>
 <p>&nbsp;</p>
 <p><strong>The Coded Gaze</strong></p>
