--- a/machinelearning.html
+++ b/machinelearning.html
@@ -202,8 +202,8 @@ Joy Buolamwimi<em>, Unmasking AI: My Mission to Protect What is Human in a World
 <p>This is color-deafness.&nbsp; The lack of efforts toward inclusion means that if this technology works successfully for the privileged classes, Google will claim it to be successful, even if it fails when used by a large percentage of folks who don&rsquo;t fit into the demographic boxes of the privileged classes. As we don&rsquo;t yet know how the Teachable Machine will be implemented, we don&rsquo;t know how disastrous its malperformance for marginalized groups could be.</p>
 <p>Dr. Buolamwimi sights yet another example in this chapter that should be a warning here. Canadian firm Winterlight Labs created a system that used machine learning to attempt to detect indications of Alzheimer&rsquo;s disease using voice recordings. The system was built using a dataset comprised primarily the voices of anglophone Canadians. But when francophone Canadians tried to use the system, they did not match the training data, and the system failed to match correctly.&nbsp; Using the Teachable Machine for musical applications led me to see one of the possible limitations it has.&nbsp; Dr. Buolamwimi&rsquo;s research has pointed out how these shortcomings of inclusion can prove disastrous for underprivileged people.&nbsp; Now is the time to expose the coded gaze in all of our work with AI, even if on the surface it does not seem connected.</p>
         <h1>Our Teachable Machine</h1>
-        <h2>Our Trained Model</h2>
-        <p>Our model identifies</p>
-        <p>Embedded video of our audio model</p>
+        <h2>Our Trained Audio Model</h2>
+        <p>Our audio model identifies pitch! Please allow our webpage to have microphone permissions to see the model in action.</p>
+ 		<iframe src="https://editor.p5js.org/codingtrain/full/e3nrNMG7A" width="600px" height="400px"></iframe>
     </body>
 </html>
